--- a/module-2/lesson-2/styles/task-2.2.2.css
+++ b/module-2/lesson-2/styles/task-2.2.2.css
@@ -1,3 +1,39 @@
 /* Your code goes below here */
+p {
+    color: black;
+    background-color: rgb(18, 154, 167);
+    font-size: 22px;
+    border: 4px dotted red;
+}
+
+ul, ol {
+    background-color: grey;
+    font-size: 22px;
+    border: 4px solid red;
+}
+
+a {
+    background-color: rgb(68, 86, 138);
+    color: red;
+    font-size: 22px;
+    border: 4px solid red;
+    width: 100px;
+    height: 100px;
+    position: relative;
+}
+
+a:hover {
+    font-size: 150%;
+    color: blue;
+    animation-name: example;
+    animation-duration: 1s;
+}
+
+@keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    100% {background-color:rgb(23, 87, 182); left:5px; top:5px;}
+    100% {color:rgb(168, 28, 63); left:5px; top:5px;}
+  }
+
 
 /* Your code goes above here */
