--- a/module-2/lesson-2/styles/task-2.2.3.css
+++ b/module-2/lesson-2/styles/task-2.2.3.css
@@ -1,5 +1,11 @@
 /* Your code goes below here */
-h1 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
+    font-weight: 900px;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400px;
 }
 /* Your code goes above here */
