--- a/module-2/lesson-2/styles/task-2.2.5.css
+++ b/module-2/lesson-2/styles/task-2.2.5.css
@@ -1,3 +1,9 @@
 /* Your code goes below here */
+#main-heading{
+    color: red;
+}
 
+.font-blue {
+ color: blue
+}
 /* Your code goes above here */
