--- a/module-3/lesson-7/styles/task-3.7.1.css
+++ b/module-3/lesson-7/styles/task-3.7.1.css
@@ -1,13 +1,53 @@
 body {
     background-color: lightgrey;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 header {
-    border: 2px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
+}
+
+button {
+    font-size: 20px;
+    height: 60px;
+    width: 120px;
+   }
+   
+   button:hover {
+       font-size: 22px;
+   }
+
+h1 {
+    color: blue;
+    text-decoration: underline;
+    font-style: italic;
+}
+
+main {
+    width: 90%;
+    margin: 2em auto;
+}
+
+div.search-container{
+    margin-bottom: 5px;
+}
+
+.filter-button {
+    height: 30px;
+    border-radius: 20%;
+    background-color: lightblue;
+    box-shadow: 3px 3px 3px rgba(9, 98, 199, 0.3);
+}
+
+div.image-selections {
+    display: flex;
+    flex-wrap: wrap;
+    flex:1;
+    justify-content: space-between;
 }
 
 div.images {
@@ -16,6 +56,15 @@ div.images {
 }
 
 img {
-    width: 100%;
-    border: 3px solid black;
+    width: 80%;
+    border: 1px solid black;
+    height: 80%;
+    margin-left: 2px;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.active {
+    background-color: darkgray;
+    color: blue;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
